--- a/index.html
+++ b/index.html
@@ -10,35 +10,82 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
+
 <body>
-    <header>
-        <section id="main1">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md">
-                        <div class="d-flex">
-                            <div>
-                                <p class="main-para text-light"><span><i class="ri-map-pin-2-fill text-warning"></i>1010 Avenue, New York, NY 10018 US. </p>
-                                </span>
-                            </div>
-                            <div>
-                                <p class="main-para text-light"> <span><i class="ri-phone-fill text-warning"></i>212 386 5575, 212 386 5576 </p>
-                                </span>
-                            </div>
-                        </div>
+
+    <section id="main1">
+        <div class="container">
+            <div class="d-flex justify-content-between">
+                <div class="d-flex gap-5">
+                    <div>
+                        <p class="main-para text-light fw-semibold"><span><i
+                                    class="ri-map-pin-2-fill text-warning"></i>1010 Avenue, New York, NY 10018
+                                US. </p>
+                        </span>
                     </div>
-                    <div class="col-md">
-                        <p class="main-para text-light"><span><i class="ri-time-fill text-warning"></i>Mon-Sat, 8.00-18.00. Sunday CLOSED</p>
+                    <div>
+                        <p class="main-para text-light fw-semibold"> <span><i class="ri-phone-fill text-warning"></i>212
+                                386 5575, 212 386 5576 </p>
                         </span>
                     </div>
                 </div>
+
+                <div class="">
+                    <p class="main-para text-light fw-semibold "><span><i class="ri-time-fill text-warning"></i>Mon-Sat,
+                            8.00-18.00. Sunday CLOSED</p>
+                    </span>
+                </div>
             </div>
-        </section>
+        </div>
+    </section>
+    <section>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container">
+                <img src="./assets/images/logo-dark.png" alt="">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-3">
+                        <li class="nav-item ms-3">
+                            <a class="nav-link active fw-semibold" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item ms-3">
+                            <a class="nav-link active fw-semibold " href="#">Pages</a>
+                        </li>
+                        <li class="nav-item ms-3">
+                            <a class="nav-link active fw-semibold " href="#">News</a>
+                        </li>
+                        <li class="nav-item ms-3">
+                            <a class="nav-link active fw-semibold " href="#">Element</a>
+                        </li>
+                        <li class="nav-item ms-3">
+                            <a class="nav-link active fw-semibold " href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <button class="nav-btn px-4 fw-semibold">Purchase</button>
+            </div>
+        </nav>
+    </section>
 
-
-
-
+    <header>
+        <div class="container">
+        <div class="">
+            <div class="header-content">
+                <h1 class="main-head fw-bold mb-4">Growth Partners</h1>
+                <p class="head-para">Connect with top consultants hand-picked by <br> Elixir consulting and finance.</p>
+            </div>
+            <div class="d-flex gap-3">
+                <button class="btnmain-1 px-4 py-2 rounded-1 fw-semibold">Read more<i class="ri-arrow-right-s-line"></i></button>
+                <button class="btnmain-2 px-4 py-2 rounded-1 fw-semibold">Contact us<i class="ri-arrow-right-s-line"></i></button>
+            </div>
+        </div>
+        </div>
     </header>
+
+
 
 
 
