--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </section>
     <section>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary d-none d-md-block">
             <div class="container">
                 <img src="./assets/images/logo-dark.png" alt="">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -72,26 +72,246 @@
 
     <header>
         <div class="container">
-        <div class="">
-            <div class="header-content">
-                <h1 class="main-head fw-bold mb-4">Growth Partners</h1>
-                <p class="head-para">Connect with top consultants hand-picked by <br> Elixir consulting and finance.</p>
+            <div class="">
+                <div class="header-content">
+                    <h1 class="main-head fw-bold mb-4">Growth Partners</h1>
+                    <p class="head-para">Connect with top consultants hand-picked by <br> Elixir consulting and finance.
+                    </p>
+                </div>
+                <div class="d-flex gap-3">
+                    <button class="btnmain-1 px-4 py-2 rounded-1 fw-semibold">Read more<i
+                            class="ri-arrow-right-s-line"></i></button>
+                    <button class="btnmain-2 px-4 py-2 rounded-1 fw-semibold">Contact us<i
+                            class="ri-arrow-right-s-line"></i></button>
+                </div>
             </div>
-            <div class="d-flex gap-3">
-                <button class="btnmain-1 px-4 py-2 rounded-1 fw-semibold">Read more<i class="ri-arrow-right-s-line"></i></button>
-                <button class="btnmain-2 px-4 py-2 rounded-1 fw-semibold">Contact us<i class="ri-arrow-right-s-line"></i></button>
-            </div>
-        </div>
         </div>
     </header>
+    <section id="welcome">
+        <div class="container">
+            <div class="d-flex flex-column align-items-center gap-2">
+                <h1 class="text-center welhead fw-bolder">Welcome to the Elixir</h1>
+                <p class="text-center mt-2 welpara">Get expert consultancy and support with Elixir, an advisory firm
+                    <br> that
+                    stand by your side always.
+                </p>
+                <div class="line1 bg-black">
+                </div>
+
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-3">
+                    <div class="card border-0 px-2">
+                        <i class="ri-line-chart-line welicon mb-3"></i>
+                        <h4 class="welhead text-center fw-bold">Business Consulting</h4>
+                        <div>
+                            <p class="card-text text-center mt-2 welpara">Solution for every business related problems,
+                                readily
+                                and skillfully.</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card border-0 px-2">
+                        <i class="ri-notification-2-line welicon mb-3"></i>
+                        <h4 class="welhead text-center fw-bold">Risk Management</h4>
+                        <div>
+                            <p class="card-text text-center mt-2 welpara">Solution for every business related problems,
+                                readily
+                                and skillfully.</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card border-0 px-2">
+                        <i class="ri-lightbulb-line welicon mb-3"></i>
+                        <h4 class="welhead text-center fw-bold">Market Research</h4>
+                        <div>
+                            <p class="card-text text-center mt-2 welpara">Solution for every business related problems,
+                                readily
+                                and skillfully.</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card border-0 px-2">
+                        <i class="ri-customer-service-2-line welicon mb-3"></i>
+                        <h4 class="welhead text-center fw-bold">Quality Services</h4>
+                        <div>
+                            <p class="card-text text-center mt-2 welpara">Solution for every business related problems,
+                                readily
+                                and skillfully.</p>
+                        </div>
 
 
+                    </div>
 
+                </div>
+    </section>
+    <section class="p-5">
+        <div class="container">
+            <div class="h-25">
+                <img class="w-100 rounded-3" src="./assets/images/video-screenshot-2.jpg" alt="">
+                <div class="row mt-5">
+                    <div class="col-md-4">
+                        <div class="card border-0 px-3">
+                            <h4 class="welhead text-start fw-samibold mb-3"><span><i
+                                        class="ri-team-fill me-2"></i></span>Awesome Team
+                            </h4>
+                            <div>
+                                <p class="card-text text-start welpara">Before talking destination, we shine a
+                                    spotlight across your organization
+                                    to fully understand it.</p>
+                            </div>
 
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card border-0 px-3">
+                            <h4 class="welhead text-start fw-samibold mb-3"><span><i
+                                        class="ri-chat-1-fill me-2"></i></span>Excellent Support
+                            </h4>
+                            <div>
+                                <p class="card-text text-start welpara">Before talking destination, we shine a
+                                    spotlight across your organization
+                                    to fully understand it.</p>
+                            </div>
 
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card border-0 px-3">
+                            <h4 class="welhead text-start fw-samibold mb-3"><i
+                                    class="ri-flashlight-fill me-2"></i></span>Faster Performance
+                            </h4>
+                            <div>
+                                <p class="card-text text-start welpara">Before talking destination, we shine a
+                                    spotlight across your organization
+                                    to fully understand it.</p>
+                            </div>
 
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section id="services">
+        <div class="container">
+            <div class="py-5">
+                <div class="d-flex flex-column align-items-center gap-3 justify-content-center">
+                    <h1 class="text-center welhead fw-bolder">Our Services</h1>
+                    <div class="line1 bg-black">
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-md-6 p-0 service1">
+                        <img class="w-100 rounded-3" src="./assets/images/6.jpg" alt="">
+                    </div>
+                    <div class="col-md-6 bg-white p-0 service2 rounded-3">
+                        <div class="p-5 bg-white rounded-3">
+                            <h4 class="fw-semibold welhead mb-3">Business Consulting</h4>
+                            <p class="welpara">As one of the world’s largest accountancy networks, elixir helps a
+                                diverse range of
+                                clients
+                                with a diverse range of needs.This is especially true of our Advisory Practice, which
+                                provides corporate finance and transaction services, business restructuring.</p>
+                            <a class="text-decoration-none text-black" href="#">Learn More<i
+                                    class="ri-arrow-right-line text-black"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 p-0 bg-white service1">
+                        <div class="p-5 rounded-3">
+                            <h4 class="fw-semibold welhead mb-3">Tax consulting</h4>
+                            <p class="welpara">As one of the world’s largest accountancy networks, elixir helps a
+                                diverse range of
+                                clients
+                                with a diverse range of needs.This is especially true of our Advisory Practice, which
+                                provides corporate finance and transaction services, business restructuring.</p>
+                            <a class="text-decoration-none text-black" href="#">Learn More<i
+                                    class="ri-arrow-right-line text-black"></i></a>
+                        </div>
 
+                    </div>
+                    <div class="col-md-6  p-0 service2 rounded-3">
+                        <img class="w-100 rounded-3" src="./assets/images/7.jpg" alt="">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 p-0 service1">
+                        <img class="w-100 rounded-3" src="./assets/images/8.jpg" alt="">
+                    </div>
+                    <div class="col-md-6 bg-white p-0 service2 rounded-3">
+                        <div class="p-5 bg-white rounded-3">
+                            <h4 class="fw-semibold welhead mb-3">Advisory</h4>
+                            <p class="welpara">As one of the world’s largest accountancy networks, elixir helps a
+                                diverse range of
+                                clients
+                                with a diverse range of needs.This is especially true of our Advisory Practice, which
+                                provides corporate finance and transaction services, business restructuring.</p>
+                            <a class="text-decoration-none text-black" href="#">Learn More<i
+                                    class="ri-arrow-right-line text-black"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section id="services">
+        <div class="container">
+            <div class="py-5">
+                <div class="d-flex flex-column align-items-center gap-3 justify-content-center">
+                    <h1 class="text-center welhead fw-bolder">Why Choose Elixir</h1>
+                    <div class="line1 bg-black">
+                    </div>
+                </div>
+                <div class="row mt-5 p-5">
+                    <div class="col-md-6">
+                        <img class="w-100 rounded-3" src="./assets/images/why-choose-us.jpg" alt="">
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card border-0 px-3">
+                            <h4 class="welhead text-start fw-samibold mb-3"><span>
+                                      <i class="ri-chat-1-fill me-2"></i></span>We Are Professional
+                            </h4>
+                            <div>
+                                <p class="card-text text-start welpara mb-4">Before talking destination, we shine a
+                                    spotlight across your organization
+                                    to fully understand it.</p>
+                            </div>
+
+                        </div>
+                         <div class="card border-0 px-3">
+                            <h4 class="welhead text-start fw-samibold mb-3"><span>
+                                       <i class="ri-palette-fill me-2"></i></span>We Are Creative
+                            </h4>
+                            <div>
+                                <p class="card-text text-start welpara mb-4">Before talking destination, we shine a
+                                    spotlight across your organization
+                                    to fully understand it.</p>
+                            </div>
+
+                        </div>
+                         <div class="card border-0 px-3">
+                            <h4 class="welhead text-start fw-samibold mb-3"><span>
+                                      <i class="ri-timer-fill"></i></span>24/7 Great Support
+                            </h4>
+                            <div>
+                                <p class="card-text text-start welpara mb-4">Before talking destination, we shine a
+                                    spotlight across your organization
+                                    to fully understand it.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
 
 
 
