--- a/index.html
+++ b/index.html
@@ -270,39 +270,39 @@
                     <div class="line1 bg-black">
                     </div>
                 </div>
-                <div class="row mt-5 p-5">
+                <div class="row mt-5 p-5 gap-4">
                     <div class="col-md-6">
                         <img class="w-100 rounded-3" src="./assets/images/why-choose-us.jpg" alt="">
                     </div>
-                    <div class="col-md-6">
-                        <div class="card border-0 px-3">
-                            <h4 class="welhead text-start fw-samibold mb-3"><span>
+                    <div class="col-md-6 p-lg-0">
+                        <div class="card bg-transparent border-0 px-3">
+                            <h4 class="welhead text-start fw-samibold mb-3 mt-2"><span>
                                       <i class="ri-chat-1-fill me-2"></i></span>We Are Professional
                             </h4>
                             <div>
-                                <p class="card-text text-start welpara mb-4">Before talking destination, we shine a
+                                <p class="card-text text-start welpara mb-5">Before talking destination, we shine a
                                     spotlight across your organization
                                     to fully understand it.</p>
                             </div>
 
                         </div>
-                         <div class="card border-0 px-3">
-                            <h4 class="welhead text-start fw-samibold mb-3"><span>
+                         <div class="card bg-transparent border-0 px-3">
+                            <h4 class="welhead text-start fw-samibold mb-3 mt-2"><span>
                                        <i class="ri-palette-fill me-2"></i></span>We Are Creative
                             </h4>
                             <div>
-                                <p class="card-text text-start welpara mb-4">Before talking destination, we shine a
+                                <p class="card-text text-start welpara mb-5">Before talking destination, we shine a
                                     spotlight across your organization
                                     to fully understand it.</p>
                             </div>
 
                         </div>
-                         <div class="card border-0 px-3">
+                         <div class="card bg-transparent border-0 px-3">
                             <h4 class="welhead text-start fw-samibold mb-3"><span>
                                       <i class="ri-timer-fill"></i></span>24/7 Great Support
                             </h4>
                             <div>
-                                <p class="card-text text-start welpara mb-4">Before talking destination, we shine a
+                                <p class="card-text text-start welpara mb-5">Before talking destination, we shine a
                                     spotlight across your organization
                                     to fully understand it.</p>
                             </div>
