--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <div class="col-md-6 p-0 service1">
-                        <img class="w-100 rounded-3" src="./assets/images/6.jpg" alt="">
+                    <div class="col-md-6 p-0 ">
+                        <img class="w-100 service1" src="./assets/images/6.jpg" alt="">
                     </div>
-                    <div class="col-md-6 bg-white p-0 service2 rounded-3">
+                    <div class="col-md-6 bg-white p-0 ">
                         <div class="p-5 bg-white rounded-3">
                             <h4 class="fw-semibold welhead mb-3">Business Consulting</h4>
                             <p class="welpara">As one of the world’s largest accountancy networks, elixir helps a
@@ -224,8 +224,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 p-0 bg-white service1">
-                        <div class="p-5 rounded-3">
+                    <div class="col-md-6 p-0 bg-white ">
+                        <div class="p-5">
                             <h4 class="fw-semibold welhead mb-3">Tax consulting</h4>
                             <p class="welpara">As one of the world’s largest accountancy networks, elixir helps a
                                 diverse range of
@@ -237,16 +237,16 @@
                         </div>
 
                     </div>
-                    <div class="col-md-6  p-0 service2 rounded-3">
-                        <img class="w-100 rounded-3" src="./assets/images/7.jpg" alt="">
+                    <div class="col-md-6  p-0 ">
+                        <img class="w-100" src="./assets/images/7.jpg" alt="">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 p-0 service1">
-                        <img class="w-100 rounded-3" src="./assets/images/8.jpg" alt="">
+                    <div class="col-md-6 p-0 ">
+                        <img class="w-100 service2" src="./assets/images/8.jpg" alt="">
                     </div>
-                    <div class="col-md-6 bg-white p-0 service2 rounded-3">
-                        <div class="p-5 bg-white rounded-3">
+                    <div class="col-md-6 bg-white p-0 ">
+                        <div class="p-5 bg-white ">
                             <h4 class="fw-semibold welhead mb-3">Advisory</h4>
                             <p class="welpara">As one of the world’s largest accountancy networks, elixir helps a
                                 diverse range of
@@ -270,14 +270,14 @@
                     <div class="line1 bg-black">
                     </div>
                 </div>
-                <div class="row mt-5 p-5 gap-4">
+                <div class="row mt-5 p-5">
                     <div class="col-md-6">
                         <img class="w-100 rounded-3" src="./assets/images/why-choose-us.jpg" alt="">
                     </div>
                     <div class="col-md-6 p-lg-0">
                         <div class="card bg-transparent border-0 px-3">
                             <h4 class="welhead text-start fw-samibold mb-3 mt-2"><span>
-                                      <i class="ri-chat-1-fill me-2"></i></span>We Are Professional
+                                    <i class="ri-chat-1-fill me-2"></i></span>We Are Professional
                             </h4>
                             <div>
                                 <p class="card-text text-start welpara mb-5">Before talking destination, we shine a
@@ -286,9 +286,9 @@
                             </div>
 
                         </div>
-                         <div class="card bg-transparent border-0 px-3">
+                        <div class="card bg-transparent border-0 px-3">
                             <h4 class="welhead text-start fw-samibold mb-3 mt-2"><span>
-                                       <i class="ri-palette-fill me-2"></i></span>We Are Creative
+                                    <i class="ri-palette-fill me-2"></i></span>We Are Creative
                             </h4>
                             <div>
                                 <p class="card-text text-start welpara mb-5">Before talking destination, we shine a
@@ -297,9 +297,9 @@
                             </div>
 
                         </div>
-                         <div class="card bg-transparent border-0 px-3">
+                        <div class="card bg-transparent border-0 px-3">
                             <h4 class="welhead text-start fw-samibold mb-3"><span>
-                                      <i class="ri-timer-fill"></i></span>24/7 Great Support
+                                    <i class="ri-timer-fill"></i></span>24/7 Great Support
                             </h4>
                             <div>
                                 <p class="card-text text-start welpara mb-5">Before talking destination, we shine a
@@ -313,8 +313,89 @@
             </div>
     </section>
 
+    <section id="investment" class="p-3 m-5">
+        <div class="container">
+            <div class="row d-flex cou justify-content-center align-items-center">
+                <div class="col-md-10 p-5">
+                    <h4 class="text-white mb-0 fw-bolder fs-3">If you have any query related investment... <br
+                            class="d-md-none">we are
+                        available 24/7</h4>
+                </div>
+                <div class="col-md-2">
+                    <button class="btn btn-light btn-ins fw-bold">Contact Us</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="Services mt-5">
+        <div class="container">
+            <div class="d-flex flex-column align-items-center gap-3 justify-content-center">
+                <h1 class="text-center welhead fw-bolder">Things You Get</h1>
+                <div class="line1 bg-black">
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-4">
+                    <div class="text-center p-3">
+                        <i class="ri-donut-chart-line get-icon"></i>
+                        <h5 class="get-head fw-bold">Creative Support</h5>
+                        <p class="get-para fs-6">We transform brands, grow businesses, and tell brand and product
+                            stories in a most creative
+                            way.</p>
+                    </div>
+                </div>
 
+                <div class="col-md-4">
+                    <div class="text-center p-3">
+                        <i class="ri-mail-line get-icon"></i>
+                        <h5 class="get-head fw-bold">Creating Experiences</h5>
+                        <p class="get-para fs-6">We transform brands, grow businesses, and tell brand and product
+                            stories in a most creative
+                            way.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="text-center p-3">
+                        <i class="ri-focus-2-line get-icon"></i>
+                        <h5 class="get-head fw-bold">Product Consulting</h5>
+                        <p class="get-para fs-6">We transform brands, grow businesses, and tell brand and product
+                            stories in a most creative
+                            way.</p>
+                    </div>
+                </div>
+            </div>
+              <div class="row mt-5">
+                <div class="col-md-4">
+                    <div class="text-center p-3">
+                        <i class="ri-globe-line get-icon"></i>
+                        <h5 class="get-head fw-bold">Business Boosting</h5>
+                        <p class="get-para fs-6">We transform brands, grow businesses, and tell brand and product
+                            stories in a most creative
+                            way.</p>
+                    </div>
+                </div>
 
+                <div class="col-md-4">
+                    <div class="text-center p-3">
+                        <i class="ri-currency-line get-icon"></i>
+                        <h5 class="get-head fw-bold">Strategic Approach</h5>
+                        <p class="get-para fs-6">We transform brands, grow businesses, and tell brand and product
+                            stories in a most creative
+                            way.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="text-center p-3">
+                        <i class="ri-folder-chart-line get-icon"></i>
+                        <h5 class="get-head fw-bold">Logistic Consulting</h5>
+                        <p class="get-para fs-6">We transform brands, grow businesses, and tell brand and product
+                            stories in a most creative
+                            way.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
