--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             </div>
     </section>
 
-    <section id="investment" class="p-3 m-5">
+    <section id="investment" class="p-3 my-5">
         <div class="container">
             <div class="row d-flex cou justify-content-center align-items-center">
                 <div class="col-md-10 p-5">
@@ -364,7 +364,7 @@
                     </div>
                 </div>
             </div>
-              <div class="row mt-5">
+            <div class="row mt-5">
                 <div class="col-md-4">
                     <div class="text-center p-3">
                         <i class="ri-globe-line get-icon"></i>
@@ -391,6 +391,36 @@
                         <p class="get-para fs-6">We transform brands, grow businesses, and tell brand and product
                             stories in a most creative
                             way.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="blue" class="py-5 my-5">
+        <div class="container p-5">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="contain p-4 rounded-3">
+                        <h4 class="text-light mb-2 fw-bolder text-center fs-3">Request a call back</h4>
+                        <p class="text-light text-center">Would you like to speak to one of our financial advisers over
+                            the phone? Just submit your
+                            details
+                            and we’ll be in touch shortly. You can also email us if you would prefer.</p>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="row input-main">
+                        <div class="col-md-6">
+                            <div>
+                                <h5 class="text-white fw-bolder fs-4 mt-5">I would like to discuss:</h5>
+                                <input class="w-100 p-2 rounded-1 mb-3 mt-3 border-0 " type=" text" placeholder="Your Name">
+                                <input class="w-100 p-2 rounded-1 mt-2" type=" text" placeholder="Subject">
+                            </div>
+                        </div>
+                        <div class="col-md-6 input-2">
+                            <input class="w-100 p-2 rounded-1 mb-4 mt-5" type=" text" placeholder="Phone number">
+                            <button class="w-100 submit rounded-1 py-2 fw-bold">Submit</button>
+                        </div>
                     </div>
                 </div>
             </div>
