--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
             </div>
         </nav>
     </section>
-
     <header>
         <div class="container">
             <div class="">
@@ -261,7 +260,6 @@
             </div>
         </div>
     </section>
-
     <section id="services">
         <div class="container">
             <div class="py-5">
@@ -312,7 +310,6 @@
                 </div>
             </div>
     </section>
-
     <section id="investment" class="p-3 my-5">
         <div class="container">
             <div class="row d-flex cou justify-content-center align-items-center">
@@ -413,7 +410,8 @@
                         <div class="col-md-6">
                             <div>
                                 <h5 class="text-white fw-bolder fs-4 mt-5">I would like to discuss:</h5>
-                                <input class="w-100 p-2 rounded-1 mb-3 mt-3 border-0 " type=" text" placeholder="Your Name">
+                                <input class="w-100 p-2 rounded-1 mb-3 mt-3 border-0 " type=" text"
+                                    placeholder="Your Name">
                                 <input class="w-100 p-2 rounded-1 mt-2" type=" text" placeholder="Subject">
                             </div>
                         </div>
@@ -426,6 +424,177 @@
             </div>
         </div>
     </section>
+    <section id="Services" class="py-5">
+        <div class="container">
+            <div class="d-flex flex-column align-items-center justify-content-center">
+                <h1 class="text-center welhead fw-bolder">Global Leadership</h1>
+                <div class="line1 bg-black">
+                </div>
+            </div>
+            <div class="row py-5">
+                <div class="col-md-4">
+                    <div>
+                        <div class="card bg-light border-0 text-center">
+                            <img src="./assets/images/1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title team-head fw-bold mt-3 mb-2">Reenal Scot</h5>
+                                <p class="main-para">Advertising Consultant</p>
+                                <p class="card-text team-para">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk
+                                    of the card’s content.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <div class="card bg-light border-0 text-center">
+                            <img src="./assets/images/2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title team-head fw-bold mt-3 mb-2">Reenal Scot</h5>
+                                <p class="main-para">Advertising Consultant</p>
+                                <p class="card-text team-para">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk
+                                    of the card’s content.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <div class="card bg-light border-0 text-center">
+                            <img src="./assets/images/3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title team-head fw-bold mt-3 mb-2">Reenal Scot</h5>
+                                <p class="main-para">Advertising Consultant</p>
+                                <p class="card-text team-para">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk
+                                    of the card’s content.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div>
+                        <div class="card bg-light border-0 text-center">
+                            <img src="./assets/images/4.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title team-head fw-bold mt-3 mb-2">Reenal Scot</h5>
+                                <p class="main-para">Advertising Consultant</p>
+                                <p class="card-text team-para">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk
+                                    of the card’s content.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <div class="card bg-light border-0 text-center">
+                            <img src="./assets/images/5.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title team-head fw-bold mt-3 mb-2">Reenal Scot</h5>
+                                <p class="main-para">Advertising Consultant</p>
+                                <p class="card-text team-para">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk
+                                    of the card’s content.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <div class="card bg-light border-0 text-center">
+                            <img src="./assets/images/10.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title team-head fw-bold mt-3 mb-2">Reenal Scot</h5>
+                                <p class="main-para">Advertising Consultant</p>
+                                <p class="card-text team-para">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk
+                                    of the card’s content.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="take">
+        <div>
+            <div class="container">
+                <div class="">
+                    <h1 class="take-icon fw-bolder "><span><i class="ri-checkbox-circle-line"></i></span>Take the right
+                        step,</h1>
+                    <h1 class="fw-bolder take-icon2">do the big things.</h1>
+                    <div class="row pt-5">
+                        <div class="col-md-3">
+                            <h1 class="text-light fw-bolder numbers mb-0">52</h1>
+                            <p class="text-light fw-semibold">Cases solved</p>
+                        </div>
+                        <div class="col-md-3">
+
+                            <h1 class="text-light fw-bolder numbers mb-0">164</h1>
+                            <p class="text-light fw-semibold">Trained Expert</p>
+                        </div>
+                        <div class="col-md-3">
+
+                            <h1 class="text-light fw-bolder numbers mb-0">38</h1>
+                            <p class="text-light fw-semibold">Branches</p>
+                        </div>
+                        <div class="col-md-3">
+
+                            <h1 class="text-light fw-bolder numbers mb-0">100</h1>
+                            <p class="text-light fw-semibold">Satisfied Client</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="p-5">
+        <div class="container">
+            <div class="card mb-3 border-0 px-5">
+                <div class="row g-0">
+                    <div class="col-md-3">
+                        <div class="ps-4">
+                            <img src="./assets/images/client3.png" class="img-fluid rounded-3" alt="...">
+                        </div>
+                    </div>
+                    <div class="col-md-9 p-0">
+                        <div class="card-body">
+                            <p class="maria-para text-start">Writing case studies was a daunting task for us. We didn’t
+                                know where to begin or what
+                                questions to ask, and clients never seemed to follow through when we asked. Elixir team
+                                did everything – with almost no time or effort for me!</p>
+                            <h5 class="maria-head fw-semibold mt-4">Maria sharapova</h5>
+                            <p class="mb-0 text-500 maria-para">Managing Director, Themewagon Inc.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="logo" class="p-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"><img src="./assets/images/logo1.png" alt=""></div>
+                <div class="col-md-2"><img src="./assets/images/logo2.png" alt=""></div>
+                <div class="col-md-2"> <img src="./assets/images/logo3.png" alt=""></div>
+                <div class="col-md-2"> <img src="./assets/images/logo4.png" alt=""></div>
+                <div class="col-md-2"> <img src="./assets/images/logo5.png" alt=""></div>
+                <div class="col-md-2"><img src="./assets/images/logo6.png" alt=""></div>
+            </div>
+        </div>
+    </section>
+    
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
