--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <section id="main1">
+    <section id="main1" class="d-none d-md-block">
         <div class="container">
             <div class="d-flex justify-content-between">
                 <div class="d-flex gap-5">
@@ -38,10 +38,9 @@
             </div>
         </div>
     </section>
-    <section>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary d-none d-md-block">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary  sticky-top">
             <div class="container">
-                <img src="./assets/images/logo-dark.png" alt="">
+                <img src="./assets/images/logo-dark.png" alt=""> 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -68,7 +67,6 @@
                 <button class="nav-btn px-4 fw-semibold">Purchase</button>
             </div>
         </nav>
-    </section>
     <header>
         <div class="container">
             <div class="">
@@ -104,7 +102,7 @@
                         <i class="ri-line-chart-line welicon mb-3"></i>
                         <h4 class="welhead text-center fw-bold">Business Consulting</h4>
                         <div>
-                            <p class="card-text text-center mt-2 welpara">Solution for every business related problems,
+                            <p class="card-text text-center m-2 welpara">Solution for every business related problems,
                                 readily
                                 and skillfully.</p>
                         </div>
@@ -116,7 +114,7 @@
                         <i class="ri-notification-2-line welicon mb-3"></i>
                         <h4 class="welhead text-center fw-bold">Risk Management</h4>
                         <div>
-                            <p class="card-text text-center mt-2 welpara">Solution for every business related problems,
+                            <p class="card-text text-center m-2 welpara">Solution for every business related problems,
                                 readily
                                 and skillfully.</p>
                         </div>
@@ -128,7 +126,7 @@
                         <i class="ri-lightbulb-line welicon mb-3"></i>
                         <h4 class="welhead text-center fw-bold">Market Research</h4>
                         <div>
-                            <p class="card-text text-center mt-2 welpara">Solution for every business related problems,
+                            <p class="card-text text-center m-2 welpara">Solution for every business related problems,
                                 readily
                                 and skillfully.</p>
                         </div>
@@ -140,7 +138,7 @@
                         <i class="ri-customer-service-2-line welicon mb-3"></i>
                         <h4 class="welhead text-center fw-bold">Quality Services</h4>
                         <div>
-                            <p class="card-text text-center mt-2 welpara">Solution for every business related problems,
+                            <p class="card-text text-center m-2 welpara">Solution for every business related problems,
                                 readily
                                 and skillfully.</p>
                         </div>
